--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,13 +5,15 @@ on:
       - '*'
 jobs:
   release:
-    runs-on: macos-latest
+    runs-on: macos-15
     defaults:
       run:
         shell: bash
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
+      - name: Select Xcode version
+        run: sudo xcode-select -s /Applications/Xcode_16.2.app/Contents/Developer
       - name: Install Homebrew dependencies
         run: |
           brew install create-dmg
